--- a/index_valentine's.html
+++ b/index_valentine's.html
@@ -124,11 +124,11 @@
     <script>
         let count = 0;
         const gifs = [
-            "https://media.tenor.com/7S_E58Vf-S8AAAAj/bubu-dudu-bubu.gif",
-            "https://media.tenor.com/vH2_p6YVwS8AAAAj/bubu-dudu.gif",      
-            "https://media.tenor.com/86H85vQ4Iq8AAAAj/dudu-bubu.gif",      
-            "https://media.tenor.com/02_X0mP-T-cAAAAj/bubu-dudu.gif",      
-            "https://media.tenor.com/E_2t9N9Xn-cAAAAj/bubu-dudu.gif"       
+                    "gif0.gif",
+                    "gif1.gif",
+                    "gif2.gif",
+                    "gif3.gif",
+                    "gif4.gif"
         ];
         const texts = ["Sigurado ka?", "Wait, rethink please!", "Bebab naman eh...", "Hala, bat lumalayo?", "NO WAY!!"];
 
@@ -172,3 +172,4 @@
     </script>
 </body>
 </html>
+
