--- a/index_valentine's.html
+++ b/index_valentine's.html
@@ -130,7 +130,7 @@
                     "gif3.gif",
                     "gif4.gif"
         ];
-        const texts = ["Sigurado ka?", "Wait, rethink please!", "Bebab naman eh...", "Hala, bat lumalayo?", "NO WAY!!"];
+        const texts = ["Sigurado ka?", "Legit ba Wais??", "BRUH", "Hala, bat lumalayo?", "HELL NAHHHH!!!"];
 
         function dodgeNo() {
             count++;
@@ -172,4 +172,5 @@
     </script>
 </body>
 </html>
+
 
