--- a/index_valentine's.html
+++ b/index_valentine's.html
@@ -5,29 +5,79 @@
     <title>For My Bebeb ❤️</title>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <style>
-        :root { --black: #1a1a1a; --retro-green: #2ecc71; --main-pink: #ff4d6d; }
+        :root {
+            --pink-bg: #ffebee;
+            --main-pink: #ff4d6d;
+            --retro-green: #2ecc71;
+            --black: #1a1a1a;
+        }
+
         body { 
-            margin: 0; padding: 0; font-family: 'Quicksand', sans-serif; 
+            margin: 0; padding: 0; 
+            font-family: 'Quicksand', sans-serif; 
             background: linear-gradient(135deg, #ffafbd 0%, #ffc3a0 100%);
             height: 100vh; display: flex; justify-content: center; align-items: center;
             overflow: hidden; text-align: center;
         }
+
+        /* Retro Window Style from your image */
         .card {
-            background: #fdf6f0; padding: 30px; border: 4px solid var(--black);
-            border-radius: 15px; box-shadow: 8px 8px 0px var(--black);
-            width: 85%; max-width: 400px; z-index: 10;
+            background: #fdf6f0;
+            padding: 30px;
+            border: 4px solid var(--black);
+            border-radius: 15px;
+            box-shadow: 8px 8px 0px var(--black);
+            width: 85%; max-width: 400px;
+            z-index: 10;
         }
-        h1 { font-family: 'Fredoka One', cursive; color: var(--black); font-size: 2.2rem; text-transform: uppercase; }
-        .btn-container { display: flex; justify-content: center; gap: 20px; margin-top: 25px; position: relative; height: 60px; }
-        button { 
-            background: var(--retro-green); color: var(--black); padding: 10px 35px; 
-            border: 3px solid var(--black); border-radius: 10px; font-family: 'Fredoka One', cursive;
-            font-size: 1.2rem; cursor: pointer; box-shadow: 4px 4px 0px var(--black); transition: 0.1s;
+
+        h1 { 
+            font-family: 'Fredoka One', cursive; 
+            color: var(--black); 
+            font-size: 2.2rem; 
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 0px rgba(0,0,0,0.1);
+            text-transform: uppercase;
+            margin: 15px 0;
         }
-        button:active { transform: translate(2px, 2px); box-shadow: 2px 2px 0px var(--black); }
-        #noBtn { background: #95a5a6; position: absolute; }
+
+        #reject-msg { font-weight: bold; color: var(--main-pink); min-height: 1.5rem; }
+
+        .btn-container { 
+            display: flex; justify-content: center; gap: 20px; 
+            margin-top: 25px; position: relative; height: 60px;
+        }
+
+        /* Clicking Animation for Yes */
+        #yesBtn { 
+            background: var(--retro-green); 
+            color: var(--black); 
+            padding: 10px 35px; 
+            border: 3px solid var(--black);
+            border-radius: 10px;
+            font-family: 'Fredoka One', cursive;
+            font-size: 1.2rem; 
+            cursor: pointer; 
+            box-shadow: 4px 4px 0px var(--black);
+            transition: 0.1s;
+        }
+        /* The "Clicking" Feel */
+        #yesBtn:active { 
+            transform: translate(2px, 2px);
+            box-shadow: 2px 2px 0px var(--black);
+        }
+
+        #noBtn { 
+            background: #95a5a6; color: var(--black); 
+            padding: 10px 30px; border: 3px solid var(--black);
+            border-radius: 10px; font-family: 'Fredoka One', cursive;
+            font-size: 1.2rem; transition: 0.2s ease;
+            box-shadow: 4px 4px 0px var(--black);
+        }
+
         .hidden { display: none !important; }
-        .emoji { position: absolute; pointer-events: none; animation: float 4s linear infinite; }
+
+        .heart { position: absolute; color: rgba(255, 255, 255, 0.5); pointer-events: none; animation: float 4s linear infinite; }
         @keyframes float {
             0% { transform: translateY(100vh) scale(1); opacity: 1; }
             100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
@@ -36,24 +86,14 @@
 </head>
 <body>
 
-    <audio id="bgMusic" loop>
-        <source src="abelyana.mp3" type="audio/mpeg">
-    </audio>
-
-    <div id="page0" class="card">
-        <h1>Gulat ka noh?</h1>
-        <p>Hello bebeb I want to ask you something....</p>
-        <div class="btn-container">
-            <button onclick="startSurprise()">Owkay bow</button>
-        </div>
-    </div>
-
-    <div id="page1" class="card hidden">
+    <div id="page1" class="card">
         <div style="border: 3px solid var(--black); display: inline-block; border-radius: 10px; overflow: hidden; background: white;">
             <img id="main-gif" src="gif0.gif" style="width: 180px; height: auto; display: block;">
         </div>
+        
         <h1>Will You Be My Valentine?</h1>
         <p id="reject-msg">Try clicking No... if you dare</p>
+
         <div class="btn-container">
             <button id="yesBtn" onclick="goToPage2()">Yes</button>
             <button id="noBtn" onmouseover="dodgeNo()" onclick="dodgeNo()">No</button>
@@ -61,51 +101,73 @@
         <p style="font-size: 0.8rem; margin-top: 20px;">Attempts: <span id="attempt-count">0</span></p>
     </div>
 
+    <div id="page2" class="card hidden">
+        <h1>YEHEEEEEY!</h1>
+        <p>I will be your Valentine forever, <b>Bebab</b>! ❤️</p>
+        <div style="margin: 15px 0;">
+            <img src="your-pic-1.jpg" style="width: 45%; border: 3px solid black; border-radius: 10px; margin: 2%;">
+            <img src="your-pic-2.jpg" style="width: 45%; border: 3px solid black; border-radius: 10px; margin: 2%;">
+        </div>
+        <p>"Mahal na mahal kita, Arabella!"</p>
+        <button id="yesBtn" onclick="goToPage3()">Saan punta?</button>
+    </div>
+
+    <div id="page3" class="card hidden">
+        <h1>Our Date Details</h1>
+        <p><b>When:</b> February 14, 2026</p>
+        <p><b>Where:</b> [Name of Place/Wingzilla?]</p>
+        <img src="place-image.jpg" style="width: 100%; border: 3px solid black; border-radius: 15px; margin-top: 15px;">
+        <p style="margin-top: 15px; font-style: italic;">Handa na ba ang tummy mo? ❤️</p>
+    </div>
+
     <script>
         let count = 0;
-        let isRejected = false;
-        const gifs = ["gif0.gif", "gif1.gif", "gif2.gif", "gif3.gif", "gif4.gif"];
+        const gifs = [
+                    "gif0.gif",
+                    "gif1.gif",
+                    "gif2.gif",
+                    "gif3.gif",
+                    "gif4.gif"
+        ];
         const texts = ["Sigurado ka?", "Legit ba Wais??", "BRUH", "Hala, bat lumalayo?", "HELL NAHHHH!!!"];
-
-        function startSurprise() {
-            document.getElementById('bgMusic').play();
-            document.getElementById('page0').classList.add('hidden');
-            document.getElementById('page1').classList.remove('hidden');
-        }
 
         function dodgeNo() {
             count++;
-            isRejected = true;
             document.getElementById('attempt-count').innerText = count;
             const noBtn = document.getElementById('noBtn');
             const gif = document.getElementById('main-gif');
             const msg = document.getElementById('reject-msg');
 
+            // Change GIF and Text
             gif.src = gifs[Math.min(count, gifs.length - 1)];
             msg.innerText = texts[Math.min(count - 1, texts.length - 1)];
 
+            // Teleport button
             const x = Math.random() * (window.innerWidth - 200) - (window.innerWidth / 2 - 100);
             const y = Math.random() * (window.innerHeight - 200) - (window.innerHeight / 2 - 100);
             noBtn.style.transform = `translate(${x}px, ${y}px)`;
         }
 
         function goToPage2() {
-            isRejected = false;
             document.getElementById('page1').classList.add('hidden');
             document.getElementById('page2').classList.remove('hidden');
         }
 
-        function createEmoji() {
-            const emoji = document.createElement('div');
-            emoji.classList.add('emoji');
-            const list = isRejected ? ['💔', '😢', '😭', '🥺'] : ['❤️', '💖', '🥰', '💕'];
-            emoji.innerHTML = list[Math.floor(Math.random() * list.length)];
-            emoji.style.left = Math.random() * 100 + 'vw';
-            emoji.style.fontSize = (Math.random() * 20 + 15) + 'px';
-            document.body.appendChild(emoji);
-            setTimeout(() => emoji.remove(), 4000);
+        function goToPage3() {
+            document.getElementById('page2').classList.add('hidden');
+            document.getElementById('page3').classList.remove('hidden');
         }
-        setInterval(createEmoji, 300);
+
+        function createHeart() {
+            const heart = document.createElement('div');
+            heart.classList.add('heart');
+            heart.innerHTML = '❤️';
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.fontSize = (Math.random() * 20 + 10) + 'px';
+            document.body.appendChild(heart);
+            setTimeout(() => heart.remove(), 4000);
+        }
+        setInterval(createHeart, 300);
     </script>
 </body>
 </html>
